--- a/package.json
+++ b/package.json
@@ -10,7 +10,12 @@
   "license": "MIT",
   "dependencies": {
     "angular": "^1.5.8",
-    "bower": "^1.7.9"
+    "angular-route": "^1.5.8",
+    "bower": "^1.7.9",
+    "express": "^4.14.0",
+    "firebase": "^3.6.1",
+    "firebaseui": "^1.0.0",
+    "http": "0.0.0"
   },
   "devDependencies": {
     "del": "^2.2.1",
