[AM]: Deleted unnecessary files, changed testing

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,11 +13,13 @@ after_script:
   - gulp clean
 
 lint_app:
+  stage: test
   script:
     - gulp vet
 
 #To be changed to mocha once tests are actually set up
 test_app:
+  stage: test
   script:
     - gulp karma
 
