--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "license": "MIT",
   "dependencies": {
     "angular-route": "^1.5.8",
-    "angular2": "^2.0.0-beta.17",
+    "angular2": "@angular/core",
     "bower": "^1.7.9",
     "es6-shim": "^0.35.1",
     "express": "^4.14.0",
@@ -36,13 +36,12 @@
     "gulp-print": "^2.0.1",
     "gulp-uglify": "^2.0.0",
     "gulp-util": "^3.0.7",
-    "jasmine": "^2.4.1",
-    "jasmine-core": "^2.4.1",
     "jshint": "^2.9.2",
     "jshint-stylish": "^2.2.0",
     "karma": "^1.1.2",
-    "karma-jasmine": "^1.0.2",
+    "karma-mocha": "^1.3.0",
     "karma-phantomjs-launcher": "^1.0.1",
+    "mocha": "^3.2.0",
     "yargs": "^4.8.1"
   }
 }
