--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "GRN_FanZone",
+  "name": "grn_fanzone",
   "description": "GRN Fanzone webapp",
   "main": "./app/app.js",
   "authors": [
