--- a/package.json
+++ b/package.json
@@ -23,9 +23,13 @@
     "zone.js": "^0.7.2"
   },
   "devDependencies": {
+    "babel-preset-env": "^1.1.7",
+    "babel-preset-es2015": "^6.18.0",
     "del": "^2.2.1",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.0",
+    "gulp-babel": "^6.1.2",
+    "gulp-concat": "^2.6.1",
     "gulp-if": "^2.0.1",
     "gulp-imagemin": "^3.0.2",
     "gulp-jshint": "^2.0.1",
@@ -34,6 +38,8 @@
     "gulp-load-plugins": "^1.2.4",
     "gulp-notify": "^2.2.0",
     "gulp-print": "^2.0.1",
+    "gulp-tslint": "^7.0.1",
+    "gulp-typescript": "^3.1.4",
     "gulp-uglify": "^2.0.0",
     "gulp-util": "^3.0.7",
     "jshint": "^2.9.2",
@@ -42,6 +48,8 @@
     "karma-mocha": "^1.3.0",
     "karma-phantomjs-launcher": "^1.0.2",
     "mocha": "^3.2.0",
+    "tslint": "^4.3.1",
+    "typescript": "^2.1.4",
     "yargs": "^4.8.1"
   }
 }
