--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "gulp-autoprefixer": "^3.1.0",
     "gulp-babel": "^6.1.2",
     "gulp-concat": "^2.6.1",
+    "gulp-htmlhint": "^0.3.1",
     "gulp-if": "^2.0.1",
     "gulp-imagemin": "^3.0.2",
     "gulp-jshint": "^2.0.1",
@@ -42,6 +43,7 @@
     "gulp-typescript": "^3.1.4",
     "gulp-uglify": "^2.0.0",
     "gulp-util": "^3.0.7",
+    "htmlhint": "^0.9.13",
     "jshint": "^2.9.2",
     "jshint-stylish": "^2.2.0",
     "karma": "^1.3.0",
@@ -49,6 +51,7 @@
     "karma-phantomjs-launcher": "^1.0.2",
     "mocha": "^3.2.0",
     "tslint": "^4.3.1",
+    "tslint-stylish": "^2.1.0-beta",
     "typescript": "^2.1.4",
     "yargs": "^4.8.1"
   }
