--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "zone.js": "^0.7.2"
   },
   "devDependencies": {
+    "angular-cli": "^0.1.0",
     "babel-preset-env": "^1.1.7",
     "babel-preset-es2015": "^6.18.0",
     "del": "^2.2.1",
