--- a/package.json
+++ b/package.json
@@ -1,55 +1,50 @@
 {
-  "name": "GRN_FanZone",
-  "version": "0.0.1",
-  "description": "GRN FanZone webapp",
-  "main": "./src/app/app.js",
-  "repository": "https://gitlab.com/cluskii/GRNFanZone.git",
-  "scripts": {
-    "test": "gulp test"
-  },
-  "author": "andrew.m.mccluskey@googlemail.com",
+  "name": "grnfan-zone",
+  "version": "0.0.0",
   "license": "MIT",
+  "angular-cli": {},
+  "scripts": {
+    "ng": "ng",
+    "start": "ng serve",
+    "lint": "tslint \"src/**/*.ts\" --project src/tsconfig.json --type-check && tslint \"e2e/**/*.ts\" --project e2e/tsconfig.json --type-check",
+    "test": "ng test",
+    "pree2e": "webdriver-manager update --standalone false --gecko false",
+    "e2e": "protractor"
+  },
+  "private": true,
   "dependencies": {
-    "@angular/core": "^2.4.1",
-    "angular-route": "^1.5.8",
-    "bower": "^1.7.9",
-    "es6-shim": "^0.35.1",
-    "express": "^4.14.0",
-    "firebase": "^3.6.1",
-    "firebaseui": "^1.0.0",
-    "http": "0.0.0",
-    "reflect-metadata": "^0.1.2",
-    "rxjs": "^5.0.0-beta.6",
-    "zone.js": "^0.7.2"
+    "@angular/common": "^2.3.1",
+    "@angular/compiler": "^2.3.1",
+    "@angular/core": "^2.3.1",
+    "@angular/forms": "^2.3.1",
+    "@angular/http": "^2.3.1",
+    "@angular/platform-browser": "^2.3.1",
+    "@angular/platform-browser-dynamic": "^2.3.1",
+    "@angular/router": "^3.3.1",
+    "angularfire2": "^2.0.0-beta.6",
+    "core-js": "^2.4.1",
+    "firebase": "^3.6.5",
+    "ng2-translate": "^5.0.0",
+    "rxjs": "^5.0.1",
+    "ts-helpers": "^1.1.1",
+    "zone.js": "^0.7.4"
   },
   "devDependencies": {
-    "babel-preset-env": "^1.1.7",
-    "babel-preset-es2015": "^6.18.0",
-    "del": "^2.2.1",
-    "gulp": "^3.9.1",
-    "gulp-autoprefixer": "^3.1.0",
-    "gulp-babel": "^6.1.2",
-    "gulp-concat": "^2.6.1",
-    "gulp-if": "^2.0.1",
-    "gulp-imagemin": "^3.0.2",
-    "gulp-jshint": "^2.0.1",
-    "gulp-less": "^3.1.0",
-    "gulp-livereload": "^3.8.1",
-    "gulp-load-plugins": "^1.2.4",
-    "gulp-notify": "^2.2.0",
-    "gulp-print": "^2.0.1",
-    "gulp-tslint": "^7.0.1",
-    "gulp-typescript": "^3.1.4",
-    "gulp-uglify": "^2.0.0",
-    "gulp-util": "^3.0.7",
-    "jshint": "^2.9.2",
-    "jshint-stylish": "^2.2.0",
-    "karma": "^1.3.0",
-    "karma-mocha": "^1.3.0",
-    "karma-phantomjs-launcher": "^1.0.2",
-    "mocha": "^3.2.0",
-    "tslint": "^4.3.1",
-    "typescript": "^2.1.4",
-    "yargs": "^4.8.1"
+    "@angular/compiler-cli": "^2.3.1",
+    "@types/jasmine": "2.5.38",
+    "@types/node": "^6.0.42",
+    "angular-cli": "1.0.0-beta.25.5",
+    "codelyzer": "~2.0.0-beta.1",
+    "jasmine-core": "2.5.2",
+    "jasmine-spec-reporter": "2.5.0",
+    "karma": "1.2.0",
+    "karma-chrome-launcher": "^2.0.0",
+    "karma-cli": "^1.0.1",
+    "karma-jasmine": "^1.0.2",
+    "karma-remap-istanbul": "^0.2.1",
+    "protractor": "~4.0.13",
+    "ts-node": "1.2.1",
+    "tslint": "^4.3.0",
+    "typescript": "~2.0.3"
   }
 }
