[AM] Fixed CI issues

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,12 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
 # compiled output
-/dist
-/tmp
+/build
+/.tmp
 
 # dependencies
 /node_modules
+/bower_components
 
 # IDEs and editors
 /.idea
@@ -14,6 +15,8 @@
 .c9/
 *.launch
 .settings/
+*.iml
+
 
 # IDE - VSCode
 .vscode/
