--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "del": "^2.2.2",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.1",
+    "gulp-babel": "^6.1.2",
     "gulp-concat": "^2.6.1",
     "gulp-htmlhint": "^0.3.1",
     "gulp-if": "^2.0.2",
@@ -48,6 +49,7 @@
     "gulp-load-plugins": "^1.4.0",
     "gulp-notify": "^2.2.0",
     "gulp-print": "^2.0.1",
+    "gulp-sourcemaps": "^2.4.0",
     "gulp-tslint": "^7.0.1",
     "gulp-typescript": "^3.1.4",
     "gulp-uglify": "^2.0.0",
@@ -58,7 +60,7 @@
     "jasmine-spec-reporter": "2.5.0",
     "jshint": "^2.9.4",
     "jshint-stylish": "^2.2.1",
-    "karma": "1.2.0",
+    "karma": "^1.2.0",
     "karma-chrome-launcher": "^2.0.0",
     "karma-cli": "^1.0.1",
     "karma-jasmine": "^1.0.2",
