[AM] Updated build location, corrected TS issues picked up by linting

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
         "experimentalAsyncFunctions": true
     },
     "files": [
-        "code/**/*.ts"
+        "src/**/*.ts"
     ],
     "exclude": [
         "node_modules"
