--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "gulp-imagemin": "^3.1.1",
     "gulp-jshint": "^2.0.4",
     "gulp-less": "^3.3.0",
+    "gulp-lesshint": "^2.1.0",
     "gulp-livereload": "^3.8.1",
     "gulp-load-plugins": "^1.4.0",
     "gulp-notify": "^2.2.0",
