[AM] Enable per-build caching

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,9 +3,12 @@
 image: node:latest
 
 cache:
+  untracked: true
+  key: $CI_BUILD_REF_NAME"
   paths:
    - node_modules/
    - bower_components/
+
 
 before_script:
   # install runners
