[AM] Added deployment task to gitlab-ci.yml

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,7 +9,7 @@ cache:
 
 before_script:
   # install runners
-  - npm install --quiet -g bower gulp
+  - npm install --quiet -g bower gulp firebase-tools
   # install test software
   - npm install --quiet -g karma karma-mocha mocha karma-phantomjs-launcher phantomjs-prebuilt
   # install everything else
@@ -48,13 +48,13 @@ lint_less:
 # End Testing #
 
 # Deployment #
-deploy_prod:
+deploy_production:
   stage: deploy
-  script:
-    - echo "Deploy to prod server"
-  environment:
-    name: Production
-    url: https://grnfanzone.firebaseio.com/
+  environment: Production
   only:
-  - master
+    - master
+  script:
+    - firebase use --add grnfanzone production
+    - firebase use --token $FIREBASE_TOKEN production
+    - firebase deploy -m "Pipeline $CI_PIPELINE_ID, build $CI_BUILD_ID" --non-interactive --token $FIREBASE_TOKEN
 # End Deployment #
