--- a/firebase.json
+++ b/firebase.json
@@ -1,14 +1,17 @@
 {
   "database": {
-    "rules": "database.rules.json"
+    "rules": {
+      "rules": {
+        ".read": "auth != null",
+        ".write": "auth != null"
+      }
+    }
   },
   "hosting": {
-    "public": "src/server",
-    "rewrites": [
-      {
-        "source": "**",
-        "destination": "/index.html"
-      }
-    ]
+    "public": "src",
+    "rewrites": [{
+      "source": "**",
+      "destination": "/index.html"
+    }]
   }
 }
