--- a/firebase.json
+++ b/firebase.json
@@ -8,7 +8,7 @@
     }
   },
   "hosting": {
-    "public": "src",
+    "public": "dist",
     "rewrites": [{
       "source": "**",
       "destination": "/index.html"
