--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -4,6 +4,7 @@
     "declaration": false,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
+    "experimentalAsyncFunctions": true,
     "lib": ["es6", "dom"],
     "mapRoot": "./",
     "module": "es6",
@@ -14,5 +15,8 @@
     "typeRoots": [
       "../node_modules/@types"
     ]
-  }
+  },
+    "exclude": [
+        "node_modules"
+    ]
 }
