--- a/package.json
+++ b/package.json
@@ -35,11 +35,14 @@
     "@types/node": "^6.0.42",
     "angular-cli": "1.0.0-beta.25.5",
     "codelyzer": "~2.0.0-beta.1",
+    "csslint": "^1.0.5",
+    "csslint-stylish": "0.0.5",
     "del": "^2.2.2",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.1",
     "gulp-babel": "^6.1.2",
     "gulp-concat": "^2.6.1",
+    "gulp-csslint": "^1.0.0",
     "gulp-htmlhint": "^0.3.1",
     "gulp-if": "^2.0.2",
     "gulp-imagemin": "^3.1.1",
