--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "gulp-if": "^2.0.2",
     "gulp-imagemin": "^3.1.1",
     "gulp-jshint": "^2.0.4",
+    "gulp-jsonlint": "^1.2.0",
     "gulp-less": "^3.3.0",
     "gulp-lesshint": "^2.1.0",
     "gulp-livereload": "^3.8.1",
@@ -64,6 +65,7 @@
     "jasmine-spec-reporter": "2.5.0",
     "jshint": "^2.9.4",
     "jshint-stylish": "^2.2.1",
+    "jsonlint": "^1.6.2",
     "karma": "^1.2.0",
     "karma-chrome-launcher": "^2.0.0",
     "karma-cli": "^1.0.1",
