--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -23,10 +23,11 @@ lint_src:
   script:
     - gulp vet-html
     - gulp vet-js
-    - gulp vet-json 
+    - gulp vet-json
     - gulp vet-css
     - gulp vet-less
     - gulp vet-ts
+    - gulp vet-fail
 
 
 test_src:
