changed db rules

--- a/firebase.json
+++ b/firebase.json
@@ -1,6 +1,12 @@
 {
   "database": {
     "rules": {
+	  "users": {
+        "$uid": {
+          ".read": "$uid === auth.uid",
+          ".write": "$uid === auth.uid"
+        }
+      },
       "rules": {
         ".read": "auth != null",
         ".write": "auth != null"
