--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -41,13 +41,13 @@ test_src:
 deploy_staging:
   stage: deploy
   environment: Staging
-#  only:
-#    - dev
+  only:
+    - dev
   script:
     - firebase use --add grnfanzone-staging staging
     - firebase use --token $FIREBASE_TOKEN grnfanzone-staging staging
     - ng build --prod
-    - firebase deploy -m "Pipeline $CI_PIPELINE_ID, build $CI_BUILD_ID" --non-interactive --token $FIREBASE_TOKEN
+    - firebase deploy -m "[Staging] Pipeline $CI_PIPELINE_ID, build $CI_BUILD_ID" --non-interactive --token $FIREBASE_TOKEN
 
 
 deploy_production:
@@ -59,5 +59,5 @@ deploy_production:
     - firebase use --add grnfanzone production
     - firebase use --token $FIREBASE_TOKEN grnfanzone production
     - ng build --prod
-    - firebase deploy -m "Pipeline $CI_PIPELINE_ID, build $CI_BUILD_ID" --non-interactive --token $FIREBASE_TOKEN
+    - firebase deploy -m "[Production] Pipeline $CI_PIPELINE_ID, build $CI_BUILD_ID" --non-interactive --token $FIREBASE_TOKEN
 # End Deployment #
