--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "angularfire2": "^2.0.0-beta.6",
     "core-js": "^2.4.1",
     "firebase": "^3.6.5",
+    "moment": "^2.17.1",
     "ng2-translate": "^5.0.0",
     "primeng": "^2.0.0-rc.1",
     "rxjs": "^5.0.1",
