--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "angularfire2": "^2.0.0-beta.6",
     "core-js": "^2.4.1",
     "firebase": "^3.6.5",
+    "ng2-toastr": "^1.4.1",
     "ng2-translate": "^5.0.0",
     "primeng": "^2.0.0-rc.1",
     "rxjs": "^5.0.1",
