--- a/package.json
+++ b/package.json
@@ -13,23 +13,32 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "^2.3.1",
-    "@angular/compiler": "^2.3.1",
-    "@angular/core": "^2.4.3",
-    "@angular/forms": "^2.3.1",
-    "@angular/http": "^2.3.1",
-    "@angular/platform-browser": "^2.3.1",
-    "@angular/platform-browser-dynamic": "^2.3.1",
-    "@angular/router": "^3.3.1",
-    "angular2-moment": "^1.1.0",
+    "@angular/common": "^2.4.7",
+    "@angular/compiler": "^2.4.7",
+    "@angular/compiler-cli": "^2.4.7",
+    "@angular/core": "^2.4.7",
+    "@angular/forms": "^2.4.7",
+    "@angular/http": "^2.4.7",
+    "@angular/platform-browser": "^2.4.7",
+    "@angular/platform-browser-dynamic": "^2.4.7",
+    "@angular/router": "^3.4.7",
+    "@types/node": "^6.0.63",
+    "angular2-moment": "^1.2.0",
     "angularfire2": "^2.0.0-beta.6",
+    "codelyzer": "^2.0.0",
     "core-js": "^2.4.1",
-    "firebase": "^3.6.5",
+    "firebase": "^3.6.9",
+    "gulp-load-plugins": "^1.5.0",
+    "gulp-sourcemaps": "^2.4.1",
+    "gulp-tslint": "^7.1.0",
+    "karma": "^1.4.1",
     "ng2-toastr": "^1.4.1",
     "ng2-translate": "^5.0.0",
-    "primeng": "^2.0.0-rc.1",
-    "rxjs": "^5.0.1",
+    "primeng": "^2.0.0",
+    "rxjs": "^5.1.0",
     "ts-helpers": "^1.1.1",
+    "tslint": "^4.4.2",
+    "tslint-stylish": "^2.1.0",
     "zone.js": "^0.7.4"
   },
   "devDependencies": {
