--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -45,6 +45,8 @@ deploy_staging:
   only:
     - dev
   script:
+    - ng test --code-coverage --single-run
+    - cat ./coverage/summary.txt
     - firebase use --add grnfanzone-staging staging
     - firebase use --token $FIREBASE_TOKEN grnfanzone-staging staging
     - ng build -dev
@@ -57,6 +59,8 @@ deploy_production:
   only:
     - master
   script:
+    - ng test --code-coverage --single-run
+    - cat ./coverage/summary.txt
     - firebase use --add grnfanzone production
     - firebase use --token $FIREBASE_TOKEN grnfanzone production
     - ng build -prod
