--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,11 @@
 # compiled output
 /dist
 /.tmp
+Documentation/Dissertation/dissertation.aux
+Documentation/Dissertation/dissertation.log
+Documentation/Dissertation/dissertation.out
+Documentation/Dissertation/dissertation.pdf
+Documentation/Dissertation/dissertation.synctex.gz
 
 # dependencies
 /node_modules
