--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,8 @@
 # compiled output
 /dist
 /.tmp
-Documentation/Dissertation/dissertation.aux
-Documentation/Dissertation/dissertation.log
+*dissertation.aux
+*dissertation.log
 Documentation/Dissertation/dissertation.out
 Documentation/Dissertation/dissertation.pdf
 Documentation/Dissertation/dissertation.synctex.gz
