--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "codelyzer": "^2.0.0",
     "core-js": "^2.4.1",
     "firebase": "^3.6.9",
+    "font-awesome": "^4.7.0",
     "gulp-load-plugins": "^1.5.0",
     "gulp-sourcemaps": "^2.4.1",
     "gulp-tslint": "^7.1.0",
@@ -39,6 +40,7 @@
     "primeng": "^2.0.0",
     "rxjs": "^5.1.0",
     "ts-helpers": "^1.1.1",
+    "ts-keycode-enum": "^1.0.4",
     "tslint": "^4.4.2",
     "tslint-stylish": "^2.1.0",
     "zone.js": "^0.7.6"
