--- a/package.json
+++ b/package.json
@@ -31,9 +31,6 @@
     "core-js": "^2.4.1",
     "firebase": "^3.6.9",
     "font-awesome": "^4.7.0",
-    "gulp-load-plugins": "^1.5.0",
-    "gulp-sourcemaps": "^2.4.1",
-    "gulp-tslint": "^7.1.0",
     "karma": "^1.4.1",
     "ng2-toastr": "^1.4.1",
     "ng2-translate": "^5.0.0",
@@ -41,15 +38,14 @@
     "rxjs": "^5.1.0",
     "ts-helpers": "^1.1.1",
     "ts-keycode-enum": "^1.0.4",
-    "tslint": "^4.4.2",
-    "tslint-stylish": "^2.1.0",
+    "webpack": "^2.3.2",
     "zone.js": "^0.7.6"
   },
   "devDependencies": {
+    "@angular/cli": "^1.0.0",
     "@angular/compiler-cli": "^2.3.1",
     "@types/jasmine": "2.5.38",
     "@types/node": "^6.0.60",
-    "angular-cli": "1.0.0-beta.25.5",
     "codelyzer": "~2.0.0-beta.1",
     "csslint": "^1.0.5",
     "csslint-stylish": "0.0.5",
@@ -67,14 +63,14 @@
     "gulp-less": "^3.3.0",
     "gulp-lesshint": "^2.1.0",
     "gulp-livereload": "^3.8.1",
-    "gulp-load-plugins": "^1.4.0",
     "gulp-notify": "^2.2.0",
     "gulp-print": "^2.0.1",
-    "gulp-sourcemaps": "^2.4.0",
-    "gulp-tslint": "^7.0.1",
     "gulp-typescript": "^3.1.4",
     "gulp-uglify": "^2.0.0",
     "gulp-util": "^3.0.8",
+    "gulp-load-plugins": "^1.5.0",
+    "gulp-sourcemaps": "^2.4.1",
+    "gulp-tslint": "^7.1.0",
     "htmlhint": "^0.9.13",
     "htmlhint-stylish": "^1.0.3",
     "jasmine-core": "2.5.2",
@@ -91,8 +87,8 @@
     "ng2-translate": "^5.0.0",
     "protractor": "~4.0.13",
     "ts-node": "1.2.1",
-    "tslint": "^4.3.0",
-    "tslint-stylish": "^2.1.0-beta",
+    "tslint": "^4.4.2",
+    "tslint-stylish": "^2.1.0",
     "typescript": "~2.0.3",
     "yargs": "^6.6.0"
   }
