--- a/package.json
+++ b/package.json
@@ -42,10 +42,10 @@
     "zone.js": "^0.7.6"
   },
   "devDependencies": {
-    "@angular/cli": "^1.0.0",
     "@angular/compiler-cli": "^2.3.1",
     "@types/jasmine": "2.5.38",
     "@types/node": "^6.0.60",
+    "angular-cli": "^1.0.0-beta.28.3",
     "codelyzer": "~2.0.0-beta.1",
     "csslint": "^1.0.5",
     "csslint-stylish": "0.0.5",
@@ -63,14 +63,14 @@
     "gulp-less": "^3.3.0",
     "gulp-lesshint": "^2.1.0",
     "gulp-livereload": "^3.8.1",
+    "gulp-load-plugins": "^1.5.0",
     "gulp-notify": "^2.2.0",
     "gulp-print": "^2.0.1",
+    "gulp-sourcemaps": "^2.4.1",
+    "gulp-tslint": "^7.1.0",
     "gulp-typescript": "^3.1.4",
     "gulp-uglify": "^2.0.0",
     "gulp-util": "^3.0.8",
-    "gulp-load-plugins": "^1.5.0",
-    "gulp-sourcemaps": "^2.4.1",
-    "gulp-tslint": "^7.1.0",
     "htmlhint": "^0.9.13",
     "htmlhint-stylish": "^1.0.3",
     "jasmine-core": "2.5.2",
